# hermes-inbox-organizer

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HERMES_PLUGIN_STANDARD.md  HERMES_SELF_INSTALL.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
deploy/dashboard-shim/inbox_organizer/: __init__.py
deploy/hooks/inbox-organizer-boot/: HOOK.yaml  handler.py
docs/: dashboard.md  draft-reinforcement-loop.md  google-bootstrap.md  hermes-wiring.md  oauth-modes.md  releasing.md  security.md  setup.md  sync-modes.md
hermes_inbox_organizer/: __init__.py  __main__.py  _background_loop.py  backfill.py  background.py  brief.py  classifier.py  cli.py  config.py  connect.py  crypto.py  dashboard_api.py  dashboard_assets.py  db.py  draft_learn.py  draft_trigger.py  drainer.py  gmail.py  inbox_tool.py  labels.py  labels_apply.py  llm.py  notifier.py  oauth.py  onboarding_tools.py  plugin.yaml  pre_classifier.py  pubsub.py  rollup.py  runtime.py  sent_handler.py  token_store.py  tools_profile.py  tools_read.py  triage.py
hermes_inbox_organizer/dashboard/: manifest.json  plugin_api.py
hermes_inbox_organizer/modules/: __init__.py  base.py  draft_feedback.py  registry.py  rollup.py  shipping.py  track17.py  twofa.py
oauth-callback/: _headers  index.html
tests/: conftest.py  test_backfill.py  test_background.py  test_brief.py  test_classifier.py  test_cli.py  test_config_feedback.py  test_crypto.py  test_dashboard_api.py  test_dashboard_assets.py  test_db.py  test_draft_feedback.py  test_draft_guard.py  test_draft_learn.py  test_draft_trigger.py  test_drainer.py  test_gmail_writer.py  test_inbox_tool.py  test_labels_disabled.py  test_modules.py  test_notifier.py  test_oauth.py  test_onboarding_tools.py  test_plugin.py  test_pubsub.py  test_rollup.py  test_runtime.py  test_sent_handler.py  test_shipping.py  test_token_store.py  test_tools_profile.py  test_tools_read.py  test_triage.py  test_twofa.py
