[project]
name = "hermes-inbox-organizer"
version = "0.1.0"
description = "Autonomous Gmail triage as an in-process Hermes plugin"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Matthew Hall", email = "matthew@hall.vc" }]
keywords = [
  "gmail", "email", "triage", "inbox", "hermes", "hermes-agent",
  "plugin", "agent", "llm", "automation",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Plugins",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Communications :: Email",
  "Topic :: Office/Business :: Groupware",
]
dependencies = [
  "cryptography>=42",  # token-at-rest encryption (lazy-imported)
]

[project.optional-dependencies]
# Live Gmail/Pub/Sub path — not needed to run the unit tests (imports are lazy).
live = [
  "google-cloud-pubsub>=2.0",
  "google-api-python-client>=2.0",
  "google-auth>=2.0",
  "google-auth-oauthlib>=1.0",  # InstalledAppFlow for `connect`
  "openai>=1.0",  # OpenRouter classifier client
]
dev = ["pytest>=8.0"]

# NOTE(publish): confirm the final GitHub owner/org before the first PyPI upload
# (assumed Northbound-Run to match the hermes-template repo).
[project.urls]
Homepage = "https://github.com/Northbound-Run/hermes-inbox-organizer"
Repository = "https://github.com/Northbound-Run/hermes-inbox-organizer"
Issues = "https://github.com/Northbound-Run/hermes-inbox-organizer/issues"
Documentation = "https://github.com/Northbound-Run/hermes-inbox-organizer/tree/main/docs"

# Hermes discovers the plugin via this entry-point group (module path only,
# no ":register" suffix) — i.e. `pip install` makes it auto-loadable.
[project.entry-points."hermes_agent.plugins"]
inbox_organizer = "hermes_inbox_organizer"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
# setuptools>=77 for PEP 639 license metadata (`license = "MIT"` SPDX expression
# + `license-files`); emits Metadata-Version 2.4. Build isolation fetches it.
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

# Auto-discover the package + all its subpackages (e.g. hermes_inbox_organizer.modules)
# so a non-editable `pip install` (the deployed image) ships them — an explicit
# packages=[...] list silently drops new subpackages.
[tool.setuptools.packages.find]
include = ["hermes_inbox_organizer*"]

[tool.setuptools.package-data]
hermes_inbox_organizer = ["plugin.yaml"]
