[project]
name = "hermes-inbox-organizer"
version = "0.2.0"
description = "Autonomous Gmail triage as an in-process Hermes plugin"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Northbound", email = "matthall28@gmail.com" }]
keywords = [
  "gmail", "email", "triage", "inbox", "hermes", "hermes-agent",
  "plugin", "agent", "llm", "automation",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Plugins",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Communications :: Email",
  "Topic :: Office/Business :: Groupware",
]
dependencies = [
  "cryptography>=42",  # token-at-rest encryption (lazy-imported)
]

[project.optional-dependencies]
# Live Gmail/Pub/Sub path — not needed to run the unit tests (imports are lazy).
live = [
  "google-cloud-pubsub>=2.0",
  "google-api-python-client>=2.0",
  "google-auth>=2.0",
  "google-auth-oauthlib>=1.0",  # InstalledAppFlow for `connect`
  "openai>=1.0",  # OpenRouter classifier client
]
dev = ["pytest>=8.0", "ruff>=0.6", "mypy>=1.10"]

[project.urls]
Homepage = "https://github.com/Northbound-Run/hermes-inbox-organizer"
Repository = "https://github.com/Northbound-Run/hermes-inbox-organizer"
Issues = "https://github.com/Northbound-Run/hermes-inbox-organizer/issues"
Documentation = "https://github.com/Northbound-Run/hermes-inbox-organizer/tree/main/docs"

# Hermes discovers the plugin via this entry-point group (module path only,
# no ":register" suffix) — i.e. `pip install` makes it auto-loadable.
[project.entry-points."hermes_agent.plugins"]
inbox_organizer = "hermes_inbox_organizer"

# Standalone setup/status wizard: `hermes-inbox-organizer setup|status`
# (also runnable as `python -m hermes_inbox_organizer`).
[project.scripts]
hermes-inbox-organizer = "hermes_inbox_organizer.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Shared ruleset across our Hermes plugins (see HERMES_PLUGIN_STANDARD.md §6).
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]
# Pre-existing debt cleared by a future one-time `ruff format` + read_text() pass:
#   E501  — line-length declared at 100 but not yet enforced on older code.
#   SIM115 — `open(p).read()` key/JSON idioms (CPython-prompt-closed; no real leak).
# Permanent:
#   RUF002 — docstrings deliberately use × (multiplication) and – (en dash) prose.
ignore = ["E501", "SIM115", "RUF002"]

[tool.ruff.lint.per-file-ignores]
# Tests deliberately use compact one-line statements (E702), short throwaway names
# like `l` (E741), blind exception asserts (B017), loop-var closures (B023), and
# mutable class defaults in fakes (RUF012); the package itself stays clean.
"tests/*" = ["E702", "E741", "B017", "B023", "RUF012"]

[tool.mypy]
files = ["hermes_inbox_organizer"]

# Live/optional deps are lazily imported and ship no type stubs; don't fail on them.
[[tool.mypy.overrides]]
module = [
  "google.*",
  "googleapiclient.*",
  "google_auth_oauthlib.*",
  "gateway.*",
  "fastapi.*",
  "openai.*",
]
ignore_missing_imports = true

[build-system]
# setuptools>=77 for PEP 639 license metadata (`license = "MIT"` SPDX expression
# + `license-files`); emits Metadata-Version 2.4. Build isolation fetches it.
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

# Auto-discover the package + all its subpackages (e.g. hermes_inbox_organizer.modules)
# so a non-editable `pip install` (the deployed image) ships them — an explicit
# packages=[...] list silently drops new subpackages.
[tool.setuptools.packages.find]
include = ["hermes_inbox_organizer*"]

[tool.setuptools.package-data]
# plugin.yaml (CLI/gateway manifest) + the dashboard UI plugin assets projected
# into $HERMES_HOME at runtime (see hermes_inbox_organizer.dashboard_assets).
hermes_inbox_organizer = [
  "plugin.yaml",
  "py.typed",
  "dashboard/manifest.json",
  "dashboard/plugin_api.py",
  "dashboard/dist/*",
]
